[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/Laser.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.1, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.4, 0.2, 2 )

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
emission_enabled = true
emission = Color( 0, 0.623529, 1, 1 )
emission_energy = 2.5
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=4]
emission_enabled = true
emission = Color( 0.898039, 0.768137, 0.0666667, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.19
direction = Vector3( 0, 1, 0 )
spread = 15.7
initial_velocity = 5.0

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=7]
emission_enabled = true
emission = Color( 0.898039, 0.768627, 0.0666667, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.19
direction = Vector3( 0, 0, 0 )
spread = 180.0
initial_velocity = 5.0
scale_curve = SubResource( 9 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 0.5, 0.5, 0.5 )

[node name="Laser" type="Area"]
collision_layer = 8
collision_mask = 80
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.05863 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Fire" type="AudioStreamPlayer" parent="."]
volume_db = -16.0

[node name="MuzzleFlash" type="Particles" parent="."]
material_override = SubResource( 4 )
emitting = false
one_shot = true
explosiveness = 0.83
randomness = 0.27
local_coords = false
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="ExplosionParticles" type="Particles" parent="."]
material_override = SubResource( 7 )
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.92
randomness = 0.27
local_coords = false
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 11 )
__meta__ = {
"_editor_description_": ""
}

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Debug" type="Spatial" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
